<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:layout_weight="1"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/fbutton_color_orange"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/singUpInfo"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:autofillHints=""
            android:background="@android:color/white"
            android:hint="@string/firstName"
            android:inputType="text" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:autofillHints=""
            android:background="@android:color/white"
            android:hint="@string/lastName"
            android:inputType="text" />

        <EditText
            android:id="@+id/cellNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:autofillHints=""
            android:background="@android:color/white"
            android:hint="@string/cellNumber"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:autofillHints=""
            android:background="@android:color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/emailPasswordButtons"
        android:layout_alignParentBottom="true"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/completeSignUpButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_pressed"
            android:layout_weight="1"
            android:text="@string/completeSignup" />

    </LinearLayout>


</RelativeLayout>
