<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logojusteat"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/justeat" />

            <TextView
                android:id="@+id/textSlogan"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/slogan"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <!--
            <info.hoang8f.widget.FButton
                android:id="@+id/btnSignUp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:buttonColor="@color/btnSignUp"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="5dp"
                app:cornerRadius="4dp"
                />

            <info.hoang8f.widget.FButton
                android:id="@+id/btnSignIn"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:buttonColor="@color/btnSignActive"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="5dp"
                app:cornerRadius="4dp"
                />
    -->

            <Button
                android:id="@+id/btnSignUp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnSignIn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:text="@string/sign_in"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>